# SoftFP

./: .gitignore  CMakeLists.txt  Makefile  meson.build  readme.txt  softfloat-specialize.h  softfloat.h  softfp.c  softfp.h  softfp_template.h
